--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -5,7 +5,7 @@
         "home": "الصفحة الرئيسية",
         "products": "المنتجات",
         "contacts": "اتصل بنا",
-        "prices": "الأسعار",
+        "prices": "المشتريات",
         "offers": "عروض",
         "premium": "حساب الأقساط",
         "register": "اشتراك",
@@ -79,7 +79,7 @@
     "contact": {
         "home": "فاملى كول",
         "location": "الموقع",
-        "locationDetail": "",
+        "locationDetail": " 31 شارع المستقل الظهير الصحراوي لمحافظة الجيزة",
         "phone": "هاتف",
         "phone1": "201210264075",
         "phone2": "201026026135"
